data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_678.wast
;; 9. **Test 9: Incorrect Evaluation with Conditional Expressions**    - Implement a `br_if` within an `if` block where the br_if condition is contingent upon the prior evaluation of another conditional expression. Ensure accurate evaluation of the pipeline of conditions.    - **Constraint Checked**: Correct sequential condition evaluation when multiple conditions are present.

(assert_invalid
  (module
    (func
      (block
        (i32.const 1) (i32.const 1)
        (if (result i32) 
          (then 
            (i32.const 0) 
            (if (result i32) (then (br_if 0 (br_if 1 (i32.const 1)))))
          )
        )
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)